# infinite-podcast

backend/: .gitignore  docker-compose.yml  pyproject.toml
backend/backend/: chatgpt_client.py  constants.py  main.py  poe.py  redis_client.py  script_generator.py  tts_client.py  twitch_chat_viewer.py  utils.py
