[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tony Du <tony56a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.5.1"
revchatgpt = "^2.3.7"
pyyaml = "^6.0"
requests = "^2.28.2"
black = "^23.1.0"
ssml-builder = "^1.1.1"
unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
