[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tony Du <tony56a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<4"
redis = "^4.5.1"
revchatgpt = "3.2.0"
pyyaml = "^6.0"
requests = "^2.28.2"
black = "^23.1.0"
ssml-builder = "^1.1.1"
unidecode = "^1.3.6"
twitchapi = "^3.9.0"
ratelimit = "^2.2.1"
openai = "^0.27.0"
pyjson5 = "^1.6.2"
hjson = "^3.1.0"
retry = "^0.9.2"
azure-cognitiveservices-speech = "^1.26.0"
better-profanity = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
